# api/handler/wishlist/wishlist.go
@@ -4,7 +4,6 @@ import (
 	"api/api/auth"
 	pb "api/genproto/sale"
 	"api/genproto/user"
-	"api/models"
 
 	"github.com/gin-gonic/gin"
 )
@@ -61,7 +60,7 @@ func (h *newWishlists) CreateWishlist(c *gin.Context) {
 // @Security ApiKeyAuth
 // @Description Get Wish list
 // @Tags WISHLIST
-// @Success 200 {object} models.WishListRes
+// @Success 200 {object} sale.GetWishlistResponse
 // @Failure 401 {object} string "Invalid token"
 // @Failure 500 {object} string "Server error"
 // @Router /wishlist [get]
@@ -82,35 +81,8 @@ func (h *newWishlists) GetWishlist(c *gin.Context) {
 		return
 	}
 
-	req := models.WishListRes{
-		UserID: userId,
-	}
-	for _, v := range res.Wishes {
-		product, err := h.Product.GetProductById(c, &pb.ProductId{Id: v.ProductId})
-		if err != nil {
-			h.Log.Error("Error getting product", "error", err)
-			c.JSON(500, gin.H{"error": err.Error()})
-			return
-		}
-		req.Wishes = append(req.Wishes, &models.WishList{
-			ID:                v.Id,
-			ProductID:         product.Id,
-			ProductName:       product.Name,
-			Description:       product.Description,
-			Price:             product.Price,
-			Stock:             product.Stock,
-			PriceWithoutStock: product.PriceWithoutStock,
-			LimitOfProduct:    product.LimitOfProduct,
-			Size:              product.Size,
-			Color:             product.Color,
-			StartDate:         product.StartDate,
-			EndDate:           product.EndDate,
-			SellerID:          product.SellerId,
-			PhotoURL:          product.Photos,
-		})
-	}
 	h.Log.Info("Wishlist retrieved successfully")
-	c.JSON(200, req)
+	c.JSON(200, res)
 }
 
 // GetWishlistById godoc
@@ -118,7 +90,7 @@ func (h *newWishlists) GetWishlist(c *gin.Context) {
 // @Description Get Wish list By Id
 // @Tags WISHLIST
 // @Param id path string true "id"
-// @Success 200 {object} sale.WishlistResponse
+// @Success 200 {object} sale.GetWishlistByIdResponse
 // @Failure 400 {object} string "Invalid data"
 // @Failure 500 {object} string "Server error"
 // @Router /wishlist/{id} [get]
@@ -137,29 +109,6 @@ func (h *newWishlists) GetWishlistById(c *gin.Context) {
 		return
 	}
 
-	product, err := h.Product.GetProductById(c, &pb.ProductId{Id: req.ProductId})
-	if err != nil {
-		h.Log.Error("Error getting product", "error", err)
-		c.JSON(500, gin.H{"error": err.Error()})
-		return
-	}
-
-	res := models.WishList{
-		ID:                id,
-		ProductID:         product.Id,
-		ProductName:       product.Name,
-		Description:       product.Description,
-		Price:             product.Price,
-		Stock:             product.Stock,
-		PriceWithoutStock: product.PriceWithoutStock,
-		LimitOfProduct:    product.LimitOfProduct,
-		Size:              product.Size,
-		Color:             product.Color,
-		StartDate:         product.StartDate,
-		EndDate:           product.EndDate,
-		SellerID:          product.SellerId,
-		PhotoURL:          product.Photos,
-	}
 	h.Log.Info("Wishlist retrieved successfully")
-	c.JSON(200, res)
+	c.JSON(200, req)
 }
